<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomenu"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/text_home"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#bbbb"
        android:text="@string/tex_Ntable"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <Spinner
        android:id="@+id/mesaSpiner"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginBottom="56dp"
        android:background="#bbbb"
        android:contentDescription="@string/app_lista2"
        android:minHeight="48dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#bbbb"
        android:text="@string/escoja_el_menu"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <Spinner
        android:id="@+id/menuSpiner"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:background="#bbbb"
        android:contentDescription="@string/app_lista"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView

        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#bbbb"
        android:text="Cantidad"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <Spinner
        android:id="@+id/cantSpiner"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginTop="144dp"
        android:background="#bbbb"
        android:contentDescription="@string/app_lista"
        android:minHeight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:layout_marginTop="156dp"
        android:onClick="onLogin5"
        android:text="@string/tex_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSpiner"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btntopay"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:layout_marginTop="156dp"
        android:onClick="onLogin6"
        android:text="@string/tex_ask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSpiner"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>